test/fail_compilation/test2775.d
module test2775;

import imports.test2775;

void foo()
{
    string str = bar!();
}
